# respackr

./: .gitignore  CHANGELOG.md  README.md  buildcfg.json  devenv.nix  genscript.py  pyproject.toml  respackr.toml
modules/: arguments.py  config.py  error.py  exclusion.py  inclusion.py  log.py  makezip.py  mcmeta.py  src.py  stats.py  svg2png.py  theme.py
respackr/: __init__.py  ascii.py  exceptions.py  info.py  logger.py  spec.toml
respackr/generate/: __init__.py  main.py  sources.py
src/: 0.json  1.json  12.json  13.json  15.json  2.json  22.json  3.json  4.json  42.json  6.json  8.json  9.json  pack.json
