[tool.poetry]
name = "respackr"
version = "2.1.0"
description = "Easily create resourcepacks for multiple Minecraft: Java Edition versions."
authors = ["Zentheon <zentheon@mailbox.org>"]
homepage = "https://github.com/zentheon/respackr"
license = "GPL-3.0"
readme = "README.md"
include = [
    { path = "respackr/spec.toml", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
respackr = "respackr:main"

[tool.poetry.dependencies]
python = "^3.12"
termaconfig = "^1.0.0"
numpy = "^2.3.2"
cairosvg = "^2.8.2"
pillow = "^11.3.0"
requests = "^2.32.4"
click = "^8.2.1"
structlog = "^25.4.0"

[tool.ruff]
# Default of 88 is a little low.
line-length = 100

[tool.pyright]
venv = "venv"
include = ["modules", "respackr"]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
